--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -15,6 +15,33 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_above="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/muscle_list"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical" />
+
+            <!-- 右边列表 -->
+            <GridView
+                android:id="@+id/exercise_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:numColumns="2"
+                android:columnWidth="150dp"
+                android:verticalSpacing="8dp"
+                android:horizontalSpacing="8dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center"
+                android:scrollbars="vertical" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="80dp"
