--- a/app/src/main/res/layout/activity_vision_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_live_preview.xml
@@ -2,13 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
   <!-- Use CameraSourcePreview instead of PreviewView -->
-
   <com.google.mlkit.vision.demo.CameraSourcePreview
       android:id="@+id/preview_view"
       android:layout_width="match_parent"
@@ -33,14 +31,12 @@
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view" />
 
-
-
   <LinearLayout
       android:id="@id/control"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       app:layout_constraintBottom_toBottomOf="parent"
-      android:background="#9999"
+      android:background="#000"
       android:orientation="horizontal">
 
     <ToggleButton
@@ -53,45 +49,36 @@
         android:textOff=""
         android:textOn=""/>
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:tabMode="scrollable">
+
+
+    </com.google.android.material.tabs.TabLayout>
+
     <TextView
         android:id="@+id/textObjectDetection"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="41dp"
         android:layout_weight="1"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
+        android:textColor="@color/white"
         android:text="目标检测" />
 
     <TextView
-        android:id="@+id/shendun"
+        android:id="@+id/textPoseDetection"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
         android:layout_weight="1"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
-        android:text="深蹲计数" />
-
-    <TextView
-        android:id="@+id/yingti"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:text="引体计数" />
-
-    <TextView
-        android:id="@+id/jiantui"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:text="肩推计数" />
+        android:textColor="@color/white"
+        android:text="FlashLight-AI健身-深蹲计数" />
 
     <!-- Add other TextViews for different models -->
 
