--- a/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
@@ -35,7 +35,7 @@
       android:id="@+id/stop_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="停止"
+      android:text="按钮"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginBottom="5dp"
