--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -16,20 +16,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- 图片展示框容器 -->
-    <LinearLayout
-        android:id="@+id/image_container"
+    <!-- 视频播放器 -->
+    <VideoView
+        android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/text_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <!-- 在代码中动态添加图片展示框和讲解文字 -->
 
-    </LinearLayout>
 
+    <!-- 另一个文字展示框 -->
+    <TextView
+        android:id="@+id/notice_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="这里是另一个文字展示框"
+        app:layout_constraintTop_toBottomOf="@id/video_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
