--- a/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
@@ -30,6 +30,18 @@
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view" />
 
+  <!-- 新添加的按钮 -->
+  <Button
+      android:id="@+id/stop_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text ="停止 "
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginBottom="5dp"
+      android:layout_marginEnd="5dp"
+      android:layout_marginRight="5dp" />
+
   <LinearLayout
       android:id="@id/control"
       android:layout_width="match_parent"
