--- a/app/src/main/res/layout/activity_vision_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_live_preview.xml
@@ -6,82 +6,95 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-  <!-- Use CameraSourcePreview instead of PreviewView -->
-  <com.google.mlkit.vision.demo.CameraSourcePreview
-      android:id="@+id/preview_view"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintBottom_toTopOf="@+id/control"/>
 
-  <com.google.mlkit.vision.demo.GraphicOverlay
-      android:id="@+id/graphic_overlay"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      app:layout_constraintLeft_toLeftOf="@id/preview_view"
-      app:layout_constraintRight_toRightOf="@id/preview_view"
-      app:layout_constraintTop_toTopOf="@id/preview_view"
-      app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
-
-  <include
-      android:id="@+id/settings_button"
-      layout="@layout/settings_style"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:layout_constraintRight_toRightOf="@id/preview_view"
-      app:layout_constraintTop_toTopOf="@id/preview_view" />
-
-  <LinearLayout
-      android:id="@id/control"
-      android:layout_width="match_parent"
-      android:layout_height="60dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:background="#000"
-      android:orientation="horizontal">
-
-    <ToggleButton
-        android:id="@+id/facing_switch"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center_vertical"
-        android:background="@layout/toggle_style"
-        android:checked="false"
-        android:textOff=""
-        android:textOn=""/>
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+    <com.google.mlkit.vision.demo.CameraSourcePreview
+        android:id="@+id/preview_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:tabMode="scrollable">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/control"/>
 
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <TextView
-        android:id="@+id/textObjectDetection"
+    <com.google.mlkit.vision.demo.GraphicOverlay
+        android:id="@+id/graphic_overlay"
         android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="目标检测" />
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="@id/preview_view"
+        app:layout_constraintRight_toRightOf="@id/preview_view"
+        app:layout_constraintTop_toTopOf="@id/preview_view"
+        app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
 
-    <TextView
-        android:id="@+id/textPoseDetection"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="FlashLight-AI健身-深蹲计数" />
+    <include
+        android:id="@+id/settings_button"
+        layout="@layout/settings_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="@id/preview_view"
+        app:layout_constraintTop_toTopOf="@id/preview_view" />
 
-    <!-- Add other TextViews for different models -->
+    <LinearLayout
+        android:id="@id/control"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#000"
+        android:orientation="horizontal">
 
-  </LinearLayout>
+        <ToggleButton
+            android:id="@+id/facing_switch"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_vertical"
+            android:background="@layout/toggle_style"
+            android:checked="false"
+            android:textOff=""
+            android:textOn=""/>
+
+
+        <!--    <Spinner-->
+        <!--        android:id="@+id/spinner"-->
+        <!--        android:layout_width="0dp"-->
+        <!--        android:layout_weight="1"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_gravity="center"/>-->
+
+        <!--  </LinearLayout>-->
+
+        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:tabMode="scrollable">
+
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <TextView
+            android:id="@+id/textObjectDetection"
+            android:layout_width="0dp"
+            android:layout_height="41dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="目标检测" />
+
+        <TextView
+            android:id="@+id/textPoseDetection"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="FlashLight-AI健身-深蹲计数" />
+
+        <!-- Add other TextViews for different models -->
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
