--- a/app/src/main/res/xml/preference_live_preview_quickstart.xml
+++ b/app/src/main/res/xml/preference_live_preview_quickstart.xml
@@ -45,12 +45,41 @@
         android:title="@string/pref_title_info_hide"/>
   </PreferenceCategory>
 
+
+
+  <PreferenceCategory android:title="@string/pref_category_barcode_scanning">
+
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="@string/pref_key_enable_auto_zoom"
+        android:persistent="true"
+        android:title="@string/pref_title_enable_auto_zoom"/>
+
+  </PreferenceCategory>
+
   <PreferenceCategory android:title="@string/pref_category_text_recognition">
+
+
     <SwitchPreference
         android:defaultValue="false"
         android:key="@string/pref_key_group_recognized_text_in_blocks"
         android:persistent="true"
         android:title="@string/pref_title_group_recognized_text_in_blocks"/>
+
+
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="@string/pref_key_show_language_tag"
+        android:persistent="true"
+        android:title="@string/pref_title_show_language_tag"/>
+
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="@string/pref_key_show_text_confidence"
+        android:persistent="true"
+        android:title="@string/pref_title_show_text_confidence"/>
+
+
   </PreferenceCategory>
 
   <PreferenceCategory
@@ -79,7 +108,10 @@
         android:entryValues="@array/pref_entry_values_face_detector_landmark_mode"
         android:key="@string/pref_key_live_preview_face_detection_landmark_mode"
         android:persistent="true"
-        android:title="@string/pref_title_face_detector_landmark_mode"/>
+
+        android:title="@string/pref_title_face_detector_landmark_mode"
+        android:summary="%s"/>
+
 
     <ListPreference
         android:defaultValue="@string/pref_entry_values_face_detector_contour_mode_all_contours"
@@ -87,7 +119,12 @@
         android:entryValues="@array/pref_entry_values_face_detector_contour_mode"
         android:key="@string/pref_key_live_preview_face_detection_contour_mode"
         android:persistent="true"
-        android:title="@string/pref_title_face_detector_contour_mode"/>
+
+
+        android:title="@string/pref_title_face_detector_contour_mode"
+        android:summary="%s"/>
+
+
 
     <ListPreference
         android:defaultValue="@string/pref_entry_values_face_detector_classification_mode_no_classifications"
@@ -95,7 +132,9 @@
         android:entryValues="@array/pref_entry_values_face_detector_classification_mode"
         android:key="@string/pref_key_live_preview_face_detection_classification_mode"
         android:persistent="true"
-        android:title="@string/pref_title_face_detector_classification_mode"/>
+        android:title="@string/pref_title_face_detector_classification_mode"
+        android:summary="%s"/>
+
 
     <ListPreference
         android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
@@ -103,7 +142,10 @@
         android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
         android:key="@string/pref_key_live_preview_face_detection_performance_mode"
         android:persistent="true"
-        android:title="@string/pref_title_face_detector_performance_mode"/>
+        android:title="@string/pref_title_face_detector_performance_mode"
+        android:summary="%s"/>
+
+
 
     <SwitchPreference
         android:defaultValue="false"
@@ -128,6 +170,14 @@
         android:persistent="true"
         android:title="@string/pref_title_pose_detector_performance_mode"
         android:summary="%s"/>
+
+    <SwitchPreference
+        android:defaultValue="true"
+
+        android:key="@string/pref_key_pose_detector_prefer_gpu"
+        android:persistent="true"
+        android:title="@string/pref_title_pose_detector_prefer_gpu"
+        android:summary="@string/pref_summary_pose_detector_prefer_gpu"/>
 
     <SwitchPreference
         android:defaultValue="true"
@@ -159,4 +209,5 @@
         android:persistent="true"
         android:title="@string/pref_title_segmentation_raw_size_mask"/>
   </PreferenceCategory>
+
 </PreferenceScreen>
