--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -15,15 +15,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.SearchView
-                android:queryHint="搜索"
-                android:iconifiedByDefault="false"
-                android:id="@+id/mSearchView"
+
+            <!-- 替换为TextView -->
+            <TextView
+                android:id="@+id/advice"
                 android:layout_width="350dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:ellipsize="end"
+                android:text="这是一个TextView，当文字超过最大行数时系统会自动换行显示。"
+                android:padding="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
                 android:background="@drawable/rounded_edittext_bg"
-                android:layout_height="wrap_content" />
+                android:layout_marginTop="10dp"/>
+
+<!--            <androidx.appcompat.widget.SearchView-->
+<!--                android:queryHint="搜索"-->
+<!--                android:iconifiedByDefault="false"-->
+<!--                android:id="@+id/mSearchView"-->
+<!--                android:layout_width="350dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:background="@drawable/rounded_edittext_bg"-->
+<!--                android:layout_height="wrap_content" />-->
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/imgCard"
@@ -44,7 +60,7 @@
                 <VideoView
                     android:id="@+id/video_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="200dp"
                     app:layout_constraintTop_toBottomOf="@id/text_view"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
