新增日记页面左滑删除的功能

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -51,18 +51,15 @@
         android:layout_toEndOf="@+id/textview"
         android:text="delete" />
 
-    <GridView
-        android:id="@+id/gridView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="395dp"
         android:layout_above="@+id/bottom_navigation"
         android:layout_below="@+id/textview"
         android:layout_marginTop="9dp"
-        android:layout_marginBottom="3dp"
-        android:columnWidth="120dp"
-        android:gravity="center"
-        android:numColumns="1"
-        android:stretchMode="columnWidth" />
+        android:layout_marginBottom="3dp" />
+
 
     <LinearLayout
         android:id="@+id/bottom_navigation"
